# simpletooling

./: README.md  demo.py  pyproject.toml  test_toolset.py
simpletooling/: __init__.py  file_sdk.py  indexing.py  interpret.py  mcp_client.py  mcp_manager.py  schema_generator.py  tool_registry.py  toolset.py
