[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simpletooling"
version = "0.1.1"
description = "A Python package that automatically converts well-typed functions into FastAPI endpoints"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zijian Zhang", email = "doomspec@outlook.com"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "minio>=7.2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/EvoEvolver/simpletooling"
Repository = "https://github.com/EvoEvolver/simpletooling"
Issues = "https://github.com/EvoEvolver/simpletooling/issues"

[tool.setuptools.packages.find]
where = ["."]
